--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
-    "react-table": "^6.10.0"
+    "react-table": "^6.10.0",
+    "xml2js": "^0.4.19"
   },
   "scripts": {
     "predeploy": "npm run build",
