Changed input/button to be dyanmic (not to submit)

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.5.7",
     "react-scripts": "3.0.0",
     "react-table": "^6.10.0",
     "xml2js": "^0.4.19"
