Refactoring xml2js

--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://gamerkingfaiz.github.io/bgg-collection"
+  "homepage": "https://betterbggcollection.com"
 }
