--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-ga": "^2.5.7",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.3",
     "react-table": "^6.10.0",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "predeploy": "npm run build",
