--- a/package.json
+++ b/package.json
@@ -2,14 +2,6 @@
   "name": "bgg-collection",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "gh-pages": "^2.0.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-scripts": "^4.0.3",
-    "react-table": "^6.10.0",
-    "xml2js": "^0.6.2"
-  },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -17,6 +9,16 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-scripts": "^4.0.3",
+    "react-table": "^6.10.0",
+    "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   },
   "eslintConfig": {
     "extends": "react-app"
